# amplifier-bundle-webruntime

./: README.md  bundle.yaml
agents/: browser-developer.md  webruntime-developer.md
behaviors/: browser-runtime.yaml  webruntime-agents.yaml  webruntime-context.yaml  webruntime-core.yaml
context/: browser-guide.md  webruntime-guide.md
context/patterns/: chat-infrastructure.md  embedded-assets.md  initialization-sequence.md
docs/: QUICKSTART.md
modules/tool-browser-storage/: README.md  pyproject.toml
modules/tool-browser-storage/amplifier_module_tool_browser_storage/: __init__.py  tool.py
scripts/: build-bundle.py
src/: amplifier_webruntime.py
src/js/: amplifier-browser.src.js  amplifier-webruntime.src.js
templates/: quickstart.html
